--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
   <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/stylesheets/main.css">
   <title>Restaurant List</title>
 </head>
 
@@ -25,6 +26,7 @@
       </a>
     </div>
   </nav>
+  <div class="banner"></div>
 
   {{{ body }}}
 
